add: 블로그 이사 후기 포스팅 fix: 메인 페이지에서 NewsLetter 삭제 add: 프로젝트 페이지 틀 구성

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,11 +1,10 @@
 ---
 name: Jinseo Song
 avatar: /static/images/avatar.png
-occupation: 백엔드 개발자
-company: Inha University
+occupation: 
+company: Inha Univ
 email: jssong.dev@gmail.com
 linkedin: https://www.linkedin.com
 github: https://github.com/rxb8k
 ---
 
-자기소개
