--- a/data/blog/think/220914.mdx
+++ b/data/blog/think/220914.mdx
@@ -5,7 +5,7 @@ lastmod: '2022-09-14'
 tags: ['생각·일상', 'next.js', 'tailwind-nextjs-starter-blog']
 draft: false
 summary: '내가 next.js 블로그를 시작한 이유'
-images: ['/static/images/canada/mountains.jpg', '/static/images/canada/toronto.jpg']
+images: ['/static/images/twitter-card.png']
 authors: ['default']
 layout: PostSimple
 ---
@@ -45,11 +45,11 @@ Jekyll, Gatsby, next.js 등 여러 정적 웹 사이트 생성기 중 내가 선
    나는 블로그에서 지식도 공유하면서, 포트폴리오 겸 내 프로젝트도 함께 정리하고 싶었다.
    그래서 카테고리에 따라 다양한 레이아웃을 사용할 수 있는 템플릿을 찾고 있었다.
    그러나 적합한 템플릿을 찾지 못하고 있었는데, 마음에 쏙 드는 next.js 템플릿을 찾았다.
-   바로 [이것](!https://github.com/timlrx/tailwind-nextjs-starter-blog)
+   바로 [이것](https://github.com/timlrx/tailwind-nextjs-starter-blog)
 
 ### 본격적으로 블로그 만들기
 
-내가 고른 것은 바로 [tailwind-nextjs-starter-blog](!https://github.com/timlrx/tailwind-nextjs-starter-blog) 템플릿이다.
+내가 고른 것은 바로 [tailwind-nextjs-starter-blog](https://github.com/timlrx/tailwind-nextjs-starter-blog) 템플릿이다.
 보자마자 마음에 쏙 들어서 바로 작업을 시작했는데, 지속적으로 `ERR_MODULE_NOT_FOUND` 에러가 발생해서 골머리를 앓았다.
 알고보니 현재 Pliny project CLI로 새 프로젝트를 시작할 경우 ERR_MODULE_NOT_FOUND 에러가 발생하는 이슈가 있다고 한다.
 혹시 이 글을 보는 사람들 중 tailwind-nextjs-starter-blog 템플릿으로 블로그를 만들 사람이 있다면 해당 이슈를 참고하여,
