--- a/data/blog/think/220914.mdx
+++ b/data/blog/think/220914.mdx
@@ -36,7 +36,7 @@ Jekyll, Gatsby, next.js 등 여러 정적 웹 사이트 생성기 중 내가 선
 2. next.js 사용 경험과 그때 느꼈던 next.js의 매력
 
    올해 1월에 FE 포지션으로 해커톤에 나가게 되며, 팀원분의 도움으로 next.js를 처음 사용해보았다.
-   그리고 내가 느꼈던 next.js 첫 인상은 '아주 편리하다'!
+   그리고 내가 느꼈던 next.js의 첫 인상은 '아주 편리하다'!
    라우팅을 직접 코드 상에서 구현하지 않고, pages 폴더 내 파일들의 파일명으로 라우팅을 할 수 있어 훨씬 효율적이고 편리하다고 느꼈다.
    비록 얕지만 매우 긍정적이었던 next.js에 대한 경험을 기반으로 또다시 next.js를 찾게 되었다.
 
