feat: TOCInline 활용해 목차 추가 (수정 필요) docs: 멋사 10기 운영진 회고 개요 추가 fix: 로고 수정

--- a/data/blog/project/likelion-10th-hackaton-review.mdx
+++ b/data/blog/project/likelion-10th-hackaton-review.mdx
@@ -1,6 +1,6 @@
 ---
 title: '멋쟁이사자처럼 대학 10주년 해커톤 후기 (feat. 은상 수상 🥈)'
-date: '2022-09-15'
+date: '2022-08-23'
 lastmod: '2022-09-15'
 tags: ['생각·일상', 'Django', '회고', '해커톤']
 draft: false
@@ -12,6 +12,7 @@ layout: PostSimple
 해커톤은 항상 짜릿하다. 특히 이번 해커톤이 더욱 그랬다.
 아이디어 기획부터 개발, 그리고 무박 2일 해커톤 현장에 이르기까지의 생생한 후기를 기록하고자 한다.
 
+<TOCInline toc={props.toc} asDisclosure />
 
 ## 서비스 소개
 <center>![이미지](/static/images/hackathon/1.png)</center>
