--- a/data/blog/think/likelion-10th-leader-review.mdx
+++ b/data/blog/think/likelion-10th-leader-review.mdx
@@ -3,7 +3,7 @@ title: '멋쟁이사자처럼 10기 운영진 회고 (上)'
 date: '2022-09-30'
 lastmod: '2022-09-30'
 tags: ['생각·일상', '멋쟁이사자처럼', '회고']
-draft: false
+draft: true
 summary: '작성 중'
 images: ['/static/images/twitter-card.png']
 authors: ['default']
@@ -34,6 +34,7 @@ layout: PostLayout
 
 둘째로 '가치'. 내가 멋사를 통해 소중한 성장을 경험한 것처럼, 나도 누군가에게 소중한 성장의 경험을 만들어주고 싶었다.
 기술, 협업, 그리고 그것들을 통해 **내 아이디어를 실현시키는 경험!**
+그리고 누군가의 그런 경험의 아주 작은 구석 한 편에 내가 있다면 그건 정말 가치 있는 일이 될 것이다.
 
 그렇게 멋사 10기 운영진으로서의 1년을 시작하게 되었고, 아기사자들을 처음 만나는 OT 자리에서 회장님의 즉석 인사권 행사(!)에 따라 백엔드 트랙 팀장을 맡게 되었다.
 얼떨결에 스크린 앞으로 불려 나간 나는 마음 속에 가지고 있던 포부를 담아 이렇게 말씀드렸다 💪
@@ -66,8 +67,6 @@ layout: PostLayout
 
 
 ### Django 실습 세션 소개
-
-내가 드렸던 실습 과제. 
 
 ### GIT 협업 레퍼런스 문서 작성
 ### 후기 + 자체 피드백
