docs: 해커톤 후기, 운영진 회고 비공개 처리

--- a/data/blog/think/likelion-10th-leader-review.mdx
+++ b/data/blog/think/likelion-10th-leader-review.mdx
@@ -11,17 +11,24 @@ layout: PostLayout
 ---
 
 **목차**
+
 1. 내가 운영진 지원을 결심한 이유
-2. 
+2. 10기 모집
 3. Python & Django 세션
    1. REST API 설계와 Django 실습
 4. 인하대 해커톤
 5. MT
-6. 되돌아보며
+6. 운영진 1년, 멋사 2년을 마치며
+
+<br />
+4~6은 [下편]()에서 다룹니다.
+
+---
 
 ## 1. 내가 운영진 지원을 결심한 이유
+
 작년 9기에서의 나는 열정으로 가득 차 있었다.
-1년 동안 참여했던 모든 해커톤과 여러 스터디에서 팀장을 맡고, 우리 학교 멋사에는 공지되지 않았던 해커톤도 혼자 찾아서 나가곤 했다. 이렇게 멋사에서 하는 모든 것에 *고민보다 Go* 마인드로 도전했던 나였지만, 운영진 지원은 결코 엄두가 나지 않았다.
+1년 동안 참여했던 모든 해커톤과 여러 스터디에서 팀장을 맡고, 우리 학교 멋사에는 공지되지 않았던 해커톤도 혼자 찾아서 나가곤 했다. 이렇게 멋사에서 하는 모든 것에 _고민보다 Go_ 마인드로 도전했던 나였지만, 운영진 지원은 결코 엄두가 나지 않았다.
 당연하다.
 올해 많이 바쁠 예정이기도 했고, 무엇보다도 내가 남들을 가르친다고? 1년 배워 놓고?
 
@@ -39,34 +46,74 @@ layout: PostLayout
 그렇게 멋사 10기 운영진으로서의 1년을 시작하게 되었고, 아기사자들을 처음 만나는 OT 자리에서 회장님의 즉석 인사권 행사(!)에 따라 백엔드 트랙 팀장을 맡게 되었다.
 얼떨결에 스크린 앞으로 불려 나간 나는 마음 속에 가지고 있던 포부를 담아 이렇게 말씀드렸다 💪
 
-
 > 작년 저에게 멋사 1년은 정말로 뜻깊고 소중한 경험이었습니다.
-올해 여러분들에게도 멋사가 그런 특별한 경험이 될 수 있도록 저희 운영진도 최선을 다할테니,
-끝까지 열정 있게 따라와주시기 바랍니다!
+> 올해 여러분들에게도 멋사가 그런 특별한 경험이 될 수 있도록 저희 운영진도 최선을 다할테니,
+> 끝까지 열정 있게 따라와주시기 바랍니다!
 
-
-## 2. 모집
+## 2. 10기 모집
 
 새학기 시작과 함께 제일 먼저 하게 되는 업무는 바로 1년을 함께 할 아기사자들을 모집하는 것.
 몇십 명의 이야기를 보고 들으며, 면접관인 내 입장에서도 오히려 배워가는 것이 많았다.
+(나 작년에 어떻게 뽑힌 거지 하고 5000번 생각함)
+멋사에 들어오고 나서도 느꼈던 감정이지만, 다시금 '세상에는 정말 대단하고 멋진 사람이 많다!'라는 것을 실감했다.
 
+내가 중요하게 봤던 것은 **열정**과 **웹 서비스에 대한 관심**이었다.
+실력은 크게 중요하지 않다.
+그보다도, 1년 동안 멋사 활동을 하며 성장하고자 하는 동기가 뚜렷하고 그 동기를 유지할 수 있는 사람들을 원했다.
+그래서 1년 동안 열심히 활동할 열정이 있는지, 웹 개발/기획에 대한 동기가 확실한지를 주로 보았다.
 
-(추가예정)
+물론 멋사에 관심을 가져준 모든 사람들의 이야기가 감히 평가할 수 없을 정도로 빛나고 소중했지만,
+특히 기억에 남는 지원자들이 있다.
+바로 **스스로 하고 싶은 것이 있어 코딩이 '필요'한 사람들**이다.
+스스로 좋아하는 것이 있고, 그 분야에서 이루고 싶은 것이 있으며,
+웹 개발 혹은 기획 역량이 본인의 꿈에서 왜 필요한지 명확히 설명할 수 있는 분들.
+이런 분들은 비단 나뿐만 아니라 대부분의 사람들에게서 좋은 인상을 받았던 것 같다.
+본인의 아이덴티티와 웹 개발 및 기획에 대한 열정이 모두 명백히 드러나기 때문이다.
 
+평가 기간 동안 평가해야 하는 서류와 면접 영상이 정말 많기 때문에 몸은 고되다.
+그러나 많은 사람들의 이야기를 들으며 배워갈 수 있어 감사했던 경험이었다.
+내년 모집 시즌 쯤에 멋사 지원 팁도 한 번 적어봐야겠다!
 
-## 3. Python & Django 세션
+## 3. Django 실습 세션 기획 및 진행
 
 트랙별 교육을 진행하는 1학기!
 백엔드 트랙에서는 기초적인 Python과 Django 프레임워크에 대한 교육을 진행했다.
 내가 맡아 진행한 세션은 바로 **Django 실습**.
+이 챕터에서는 내가 이 세션을 기획하고 직접 진행하기까지의 모든 과정을 기록하고자 한다.
+
+여담이지만 당시 세션 진행, 졸업 프로젝트 최종 논문, 인턴 모집 일정이 겹쳐 시간적으로도,
+체력적으로도 여유가 많지 않았던 때라 정말 힘들었다..
+시간을 쪼개고 쪼개서 새벽 4시부터 학교에 나와 세션 준비하던 기억이 난다.
+
+### 세션 기획 과정
+
 당시 백엔드 아기사자들은 세미나를 통해 Django에 대한 전반적인 지식은 있었으나, 이를 이용해 본격적으로 직접 개발을 해 본 경험은 아직 없는 상황이었다.
 (+ 기말고사 기간으로 인한 기억 휘발)
 
-따라서 나는 아기사자들이 세미나를 통해 익힌 Django 지식을 기반으로, 직접 Django를 이용해 간단한 사이트를 개발할 수 있도록 하는 것을 목표로 이 세션을 기획했다.
-나아가, 단순히 Django의 동작 원리를 익힐 뿐만 아니라 Git을 활용한 협업과 API 설계/명세, DB 설계 등 **실제 개발 협업에서 필요로 하는 것들**을 직접 해 볼 수 있도록 했다.
+따라서 나는 아기사자들이 세미나를 통해 익힌 Django 지식을 기반으로,
+직접 Django를 이용해 간단한 사이트를 개발할 수 있도록 하는 것을 목표로 이 세션을 기획했다.
+나아가, 단순히 Django의 동작 원리를 익힐 뿐만 아니라
+Git을 활용한 협업과 API 설계/명세, DB 설계 등 **실제 개발 과정에서 필요로 하는 것들**을 직접 해 보는 것이 중요하다 생각했다.
 
+그렇게 '개발 과정 체험'을
+'Django 실습 세션'으로 진행된 세션이지만
+백엔드 개발 자체의 난이도나 스케일은 오히려 그닥 하드하지 않게 구성하고, 전반적인 백엔드 개발 흐름과 그에 요구되는 설계, 협업 방식을 체험하실 수 있도록 다양한 규칙과 레퍼런스를 제공했다.
 
-### Django 실습 세션 소개
+### MBTI 커뮤니티 만들기 과제
 
-### GIT 협업 레퍼런스 문서 작성
-### 후기 + 자체 피드백
+![과제설명1](https://user-images.githubusercontent.com/82093280/195272083-8b0504e0-d0af-4afc-90e5-374177b943a3.png)
+
+내가 드린 과제이다.
+바로 MBTI 테스트가 포함된 커뮤니티 만들기로,
+게시글, 댓글 CRUD와 유저 관련 기본 기능을 포함하고 있다.
+이전 Django 세미나에서 보셨을 기본 게시판 만들기에 +a로 최근 유행하는 MBTI 테스트를 얹어 보았다.
+간단한 로직 구현을 필요로 하되 부담이 크지 않고, 또 이런 테스트 만들기는 해커톤이나 사이드 프로젝트 등에서 굉장히 활발하게 사용될 수 있는 주제 중 하나이기 떄문이다.
+
+이런 식으로 구현해야 하는 기능들을 제시하고,
+자율적으로 DB 테이블과 URL을 설계하고 기능을 직접 구현하도록 했다.
+
+![과제설명2](https://user-images.githubusercontent.com/82093280/195272113-1351d2fd-47c7-434a-bf6d-dcbab9dd9b8e.png)
+
+### Git 협업 레퍼런스 문서 작성
+
+### 세션 후기 (feat. 아기사자 밤샘코딩 시킨 썰 푼다..)
