docs: 우테코 4기 데모데이 후기 포스팅 추가

--- a/data/blog/think/woowacourse-4th-demoday-review.mdx
+++ b/data/blog/think/woowacourse-4th-demoday-review.mdx
@@ -1,11 +1,11 @@
 ---
-title: '우아한테크코스 4기 데모데이 참관 후기'
+title: '우아한테크코스 4기 데모데이 관람 후기'
 date: '2022-10-21'
 lastmod: '2022-10-21'
 tags: ['생각·일상', '우아한테크코스', '데모데이']
 draft: false
 summary: '우아 소리 나오는 우테코 데모데이'
-images: ['/static/images/twitter-card.png']
+images: ['/static/images/woowacourse-4th-demoday-review/포스터.png']
 authors: ['default']
 layout: PostSimple
 ---
@@ -13,7 +13,7 @@ layout: PostSimple
 오늘은 아주 _우아한_ 경험을 하고 왔다.
 바로 우아한테크코스 4기 데모데이!
 우테코 4기 교육생들이 직접 기획하고 개발한 다양한 서비스들을 직접 체험해 볼 수 있는 행사이다.
-우테코에 계신 지인분의 소개를 받고, 좋은 경험이 되겠다 싶어 바로 신청했다.
+우테코에 계신 지인분의 소개를 받고, 좋은 경험이 되겠다 싶어 바로 관람 신청을 했다.
 
 <center>
   <img src="/static/images/woowacourse-4th-demoday-review/포스터.png" width="400" height="400" />
@@ -43,18 +43,18 @@ layout: PostSimple
 그보다 한 층 더 나아가 *천만명*의 헤비 유저를 가진 서비스로의 큰 그림을 그릴 때
 어떤 부분을 고민하고, 논의하셨는지 궁금했다.
 
-'저는 아직 학생인데, 실 사용자가 있는 서비스를 개발해 본 경험이 없다.
+'저는 아직 학생인데, 실 사용자가 있는 스케일의 서비스를 개발해 본 경험이 없다.
 그래서 달록팀이 GitHub Issue에서 '천만명이 사용하는 서비스로 서비스를 확대한다'라는 논의를 하신 것이 되게 인상 깊었는데,
 이 부분을 논의하실 때 어떤 부분을 고민하셨는지 궁금하다' - 내가 드린 질문.
 
 서비스 자체에 대한 질문이 아니라서 질문을 드리면서도 이런 거 여쭤봐도 되나.. 하면서 여쭤봤는데,
-감사하게도 너무 멋진 답변을 해주셨다..🥺
+감사하게도 너무 멋진 답변을 해주셨다 🥺
 고가용성(HA)에 대한 말씀을 해주셨는데,
 튼튼한 인프라와 DB 및 서버 다중화가 필요할 것이라고 대답해주셨다.
-또, 더욱 많은 양을 담게 된 DB를 어떻게 효율적으로 관리할 것인지도 고려해야 하며,
+또, 더욱 많은 양의 데이터를 담게 된 DB를 어떻게 효율적으로 관리할 것인지도 고려해야 하며,
 서비스 일부에 장애가 생겨도 전체 동작에 차질이 가서는 안 된다는 점도 말씀해주셨다.
 이 부분은 내가 미처 생각해보지 못한 부분이었고, 질의응답을 통해 많은 것을 배울 수 있었다.
-나의 부족한 질문에 답변해주신 달록 개발자분들에게 다시 한 번 감사하다. 😆
+나의 질문에 답변해주신 달록 개발자분들에게 다시 한 번 감사하다. 😆
 
 <center>![이미지](/static/images/woowacourse-4th-demoday-review/스모디1.png)</center>
 <center>![이미지](/static/images/woowacourse-4th-demoday-review/스모디2.png)</center>
@@ -64,15 +64,36 @@ layout: PostSimple
 [서비스 바로가기](https://www.smody.co.kr/home)
 
 역시 이번에도 회원가입을 하고 서비스를 직접 체험해보았다.
-챌린지 목록 중에는 이번 데모데이의 서비스들과 관련된 챌린지도 있었다.
+챌린지 목록 중에는 이번 데모데이의 서비스들과 관련된 챌린지도 있었다!
 마침 달록 부스에 다녀온 뒤라 '달록에서 우테코 일정 확인하기' 챌린지에 한 번 참여해보았다.
-감사하게도 댓글도 남겨주셨다! 우와우 💜
+감사하게도 댓글도 남겨주셨다~~ 와우 💜
+
+모두 사진으로 남기지는 못했지만, 이외에도
+회고 템플릿과 회고를 공유할 수 있는 회고 플랫폼 **회고덕**,
+우테코 익명 커뮤니티 **속닥속닥**,
+개발자들의 도구를 공유하는 **F12** 등
+우테코 크루들이 개발한 많은 훌륭한 서비스들을 직접 체험하고, 방명록도 남겼다.
 
 <center>
   <img src="/static/images/woowacourse-4th-demoday-review/슬쩍.png" width="500" height="500" />
 </center>
 <center>슬쩍 서 봄</center>
 
-3시간의 짧은 시간이었지만 정말 재밌게 즐겼고, 또 많은 것을 느낄 수 있었다.
+3시간의 짧은 시간이었지만 정말 재미있게 즐겼고, 또 많은 것을 느낄 수 있었다.
+요즘 우테코 지원 준비에 한창인데, 그렇다보니
+마치 대학 탐방 온 고등학생이 된 기분이었다 ㅋㅋㅋ
 
---- 추후 내용 추가 예정
+상상 속의 아이디어를 기술과 협업을 통해 직접 구현해내는 것은 항상 뜨겁고 멋진 일이다.
+그리고 이를 남들에게 공개하는 기회는 늘 짜릿하다.
+3개월 간의 열정을 아낌 없이 쏟아내고 마침표를 찍는 현장에 함께하며,
+참관자였던 나도 그 열정을 조금이나마 몸소 느낄 수 있었다.
+3주 개발한 결과물을 보여줄 때도 가슴이 떨리던데,
+지금 부스를 운영하시는 분들은 얼마나 벅차고 신날까 하는 생각이 들었다.
+
+우테코의 교육 방식과 구성원들이 만들어낸 깊이 있는 개발 학습 방식과 협업 문화도 돋보였다.
+단순히 구현하는 것에 그치지 않고,
+지속적으로 리팩터링과 유지보수, 운영을 하며 깊이 있는 고민과 학습을 하는 경험!
+실제로 프로젝트 기간 동안 학습한 주제가 있으면 적용해보기도 한다고 한다.
+또, 소통과 토론을 중심으로 각 팀만의 개발 문화와 룰을 설정해 프로젝트를 진행한 점도 인상깊었다.
+
+내년 5기 데모데이에는 크루로 참여하고 싶다 🔥
