docs: Author 정보

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,10 +1,18 @@
 ---
 name: Jinseo Song
 avatar: /static/images/avatar.png
-occupation: 
+occupation:
 company: Inha Univ
 email: jssong.dev@gmail.com
-linkedin: https://www.linkedin.com
 github: https://github.com/rxb8k
 ---
 
+**❤️ Like**
+
+- 머릿속 상상이 기술을 통해 구현될 때 사람들의 일상이 변화하는 것
+- 좋은 사람들과 공동의 목표를 향해 성장하는 경험
+- 피식하는 개발자 개그
+
+**👩🏻‍💻 Studying for**
+
+- 설계, 협업, 신기술, 그리고 장기적 차원에서의 개발을 고민할 수 있는 **멀리 보는 개발자**
