docs: 운영진 회고 상 수정

--- a/data/blog/think/likelion-10th-leader-review.mdx
+++ b/data/blog/think/likelion-10th-leader-review.mdx
@@ -166,15 +166,16 @@ Git Flow는 심화 레퍼런스 정도로만 소개를 드렸다.
 
 과제를 설명해드릴 당시 많은 분들이 너무 어려워보인다며 걱정을 하셨는데,
 그래도 발표할 때 결과물을 보니 다들 열심히 하셔서 멋진 결과물을 내주셨다.
-또, 이후 세션 및 해커톤부터는 DRF를 배우고, 프론트와의 협업도 하게 되며 더이상 이 세션에서 작성했던 것처럼 개발을 하진 않게 되었지만,
+또, 이후 세션 및 해커톤부터는 DRF를 배우고, 프론트와의 협업도 하게 되며 더이상 이 세션에서 작성했던 것처럼 코드를 작성하진 않게 되었지만,
 Git, DB 도식화(ERD), API 명세 등 내가 따로 강조하고 싶어 제시해드렸던 것들 대부분을
 추후 해커톤에서도 유용하게 활용하신 것 같았다.
 
-다만 개인적으로 세션 구성에 있어 아쉬웠던 점이 있다면,
-Git 협업을 좀 더 적극적으로 알려드리지 못한 것이다.
-정말 중요하고, 처음엔 쉽지 않은 부분임에도 설명이 부족했던 것 같다.
-레퍼런스를 작성해서 드리긴 했지만..
-아예 오프라인 세션 설명 시간에 간단히 설명해드리는 편이 낫지 않았을까 싶다.
+다만 개인적으로 아쉬웠던 점이 있다면..
+Git을 활용한 협업을 해보시길 의도해 제약 조건, 직접 작성한 레퍼런스 등을 드렸으나
+많은 팀이 실제 협업 과정에서 Git을 활용하시지는 않았던 것이다.
+정말 중요하고, 처음엔 쉽지 않은 부분임에도 설명이 부족했던 것 같다. ㅠㅠ
+결국 회의를 통해 Git 협업과 commit convention은 백엔드 운영진에서 드린 인하대 해커톤 제약 조건이 되었고,
+지금 아기사자분들은 Git을 아주 멋지게 사용하신다. 👍
 
 여러 부족한 점도 많았지만 이렇게 나의 Django 실습 세션이 끝났다.
 세션을 준비하며 무엇이 아기사자분들에게 필요한 지식일지,
