--- a/data/blog/woowacourse-5th/precourse-review-week3.mdx
+++ b/data/blog/woowacourse-5th/precourse-review-week3.mdx
@@ -102,13 +102,13 @@ Rank 데이터에 접근한다.
 
 - 1주차부터 꾸준히 기능 목록을 업데이트 해오고 있었다.
   1주차에는 이게 기초 설계가 탄탄하지 않아서 그런 줄 알고 반성을 했는데,
-  2주차 공통 피드백을 통해 기능 목록을 꾸준히 재검토, 업데이트 하는 습관은
+  2주차 공통 피드백을 통해 기능 목록을 꾸준히 재검토 & 업데이트 하는 습관은
   좋은 습관임을 알게 되었다.
 
 - 하나의 메소드가 하나의 기능만을 수행하게 하라는 원칙을 잘 지키고 있는 것 같다.
   이번 주차부터 새로 생긴 요구 사항으로 함수의 길이 제한(15라인)이 생겼는데,
   꾸준히 1기능 1메소드를 기준으로 연습해왔더니
-  그리 어렵지 않게 요구 사항을 준수할 수 있었다.
+  의외로 그리 어렵지 않게 요구 사항을 준수할 수 있었다.
 
 # 아쉬운 점
 
@@ -121,3 +121,10 @@ Rank 데이터에 접근한다.
   문자열, 상수 등을 따로 빼고 상수화(static final)시켜 사용했어야 했는데
   막상 구현하다보니 나도 모르게 코드에 그대로 문자열, 상수를 직접 넣고 있었다.
   다음주에는 이런 부분도 꼼꼼히 개선해야겠다.
+
+- LottoGame 클래스에서는 로또 게임에 대한 전반적인 로직을 담당한다.
+  이 전체적인 흐름을 진행하는 play() 메소드를 만들었는데,
+  이 메소드에서는 번호 입력부터 수익률 출력까지 모든 동작의 메소드 호출을 담당하기 때문에
+  함수 하나의 기능이 너무 비대해진 느낌이다.
+  짜면서도 계속 '이게 맞나..' 라는 생각이 들었다. 이 부분에 대해서는
+  미션 제출이 끝나고 커뮤니티에 한 번 의견을 여쭤봐야겠다.
